# pybind11_example

./: .gitignore  CMakeLists.txt  README.md  init_module.cpp  readme.md
glue/: glue.cmake  init_glue.cpp  init_glue.h
glue/Pet/: Pet.cmake  hunger.help  init_Pet.cpp  name.help
inc/: inc.cmake  include_json.h  include_pybind11.h  json.hpp  pet.h
pyhelper/: AddClangFormat.cmake  AddPythonUnitTests.cmake  SetupCppCompiler.cmake  pyhelper.cmake  readme.md
src/: pet.cpp  src.cmake
test/: __init__.py  test_hunger.py  test_name.py
